--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <Html>  
     <head>   
     <title>  
-   Binge Watch Online  
+   Binge Watch Online Now  
     </title>  
     </head>  
     <body bgcolor="Lightskyblue">  
